Bug fixes and enhancements
Resolved a non-reset issue with the AIPlayController, which meant chained AIs failed to work as intended.
Added an extra switch for ending the game upon losing a life.
Added a level rule syntax to enable it to determine the correct brain regardless of level.
New /Templates that score unlimited (never lose a life), with corresponding config.
Additional user protection from toxic config changes.

--- a/SpaceInvadersAI/invaders-config.json
+++ b/SpaceInvadersAI/invaders-config.json
@@ -1,104 +1,1 @@
-{
-  "Mode": 0,
-  "BrainTemplates": {
-    "0": {
-      "StartingScore": 0,
-      "LevelRule": "1-4",
-      "BrainTemplateFileName": ".\\Templates\\s=5110 lvl=5 ik=268 sk=3.tem"
-    },
-    "1": {
-      "StartingScore": 5110,
-      "LevelRule": "5-6",
-      "BrainTemplateFileName": ".\\Templates\\s=7960 lvl=7 ik=146 sk=2.tem"
-    },
-    "2": {
-      "StartingScore": 7960,
-      "LevelRule": "7-8",
-      "BrainTemplateFileName": ".\\Templates\\s=9770 lvl=8 ik=101 sk=0.tem"
-    },
-    "3": {
-      "StartingScore": 9770,
-      "LevelRule": "9-10",
-      "BrainTemplateFileName": ".\\Templates\\s=10010 lvl=9 ik=21 sk=0.tem"
-    },
-    "4": {
-      "StartingScore": 0,
-      "LevelRule": "",
-      "BrainTemplateFileName": ""
-    },
-    "5": {
-      "StartingScore": 0,
-      "LevelRule": "",
-      "BrainTemplateFileName": ""
-    },
-    "6": {
-      "StartingScore": 0,
-      "LevelRule": "",
-      "BrainTemplateFileName": ""
-    },
-    "7": {
-      "StartingScore": 0,
-      "LevelRule": "",
-      "BrainTemplateFileName": ""
-    },
-    "8": {
-      "StartingScore": 0,
-      "LevelRule": "",
-      "BrainTemplateFileName": ""
-    }
-  },
-  "UseActionFireApproach": false,
-  "AIHiddenLayers": [
-    0,
-    0,
-    0
-  ],
-  "MovesBeforeMutation": 100000,
-  "SelectionType": 2,
-  "CreatingARandomNetwork": true,
-  "ConcurrentGames": 200,
-  "DesiredRandomNeurons": 11,
-  "MinimumNumberOfNeurons": 3,
-  "MaximumNumberOfNeurons": 99,
-  "PercentOfBrainsToCreateAsNewRandomDuringMutation": 50,
-  "PercentOfBrainsToCreateFromTemplate": 5,
-  "PercentOfBrainsPreservedDuringMutation": 5,
-  "NumberOfTimesASingleBrainIsMutatedInOneGeneration": 2,
-  "PercentChanceABrainIsPickedForMutation": 50,
-  "PercentageOfDeadScoreThreshold": 0.9,
-  "AIPlaysWithShields": true,
-  "AIOneLevelOnly": false,
-  "AIStartLevel": 1,
-  "AIStartScore": 0,
-  "AllowedActivationFunctions": [
-    12,
-    16,
-    17,
-    18
-  ],
-  "AllowedMutationMethods": [
-    0,
-    1,
-    2,
-    3,
-    4,
-    5,
-    6,
-    7,
-    8,
-    9,
-    10,
-    11
-  ],
-  "CellTypeRatios": {
-    "PERCEPTRON": 100,
-    "AND": 25,
-    "TRANSISTOR": 25,
-    "IF": 25,
-    "MAX": 25,
-    "MIN": 25
-  },
-  "Template": ".\\Templates\\s=5110 lvl=5 ik=268 sk=3.tem",
-  "InputToAI": 2,
-  "AIRadarSamplePoints": 30
-}
+{"Mode":1,"BrainTemplates":{"0":{"StartingScore":0,"LevelRule":"1","BrainTemplateFileName":".\\Templates\\radar position s=1090 lvl=1 ik=55 sk=1.tem"},"1":{"StartingScore":1090,"LevelRule":"2","BrainTemplateFileName":".\\Templates\\radar position s=2080 lvl=2 ik=55 sk=0.tem"},"2":{"StartingScore":2080,"LevelRule":"3","BrainTemplateFileName":".\\Templates\\radar position s=3120 lvl=3 ik=55 sk=1.tem"},"3":{"StartingScore":3120,"LevelRule":"4","BrainTemplateFileName":".\\Templates\\radar position s=4110 lvl=4 ik=55 sk=0.tem"},"4":{"StartingScore":5200,"LevelRule":"5,6,\u002B6,\u002B1,\u002B1,...","BrainTemplateFileName":".\\Templates\\radar position s=5940 lvl=6 ik=55 sk=0.tem"},"5":{"StartingScore":5100,"LevelRule":"7,\u002B1,\u002B1,\u002B6,...","BrainTemplateFileName":".\\Templates\\radar position s=6930 lvl=7 ik=55 sk=0.tem"},"6":{"StartingScore":6930,"LevelRule":"10,\u002B8,...","BrainTemplateFileName":".\\Templates\\radar position s=8020 lvl=10 ik=55 sk=1.tem"},"7":{"StartingScore":8020,"LevelRule":"11,\u002B8,...","BrainTemplateFileName":".\\Templates\\radar position s=9160 lvl=11 ik=55 sk=1.tem"},"8":{"StartingScore":0,"LevelRule":"","BrainTemplateFileName":""},"9":{"StartingScore":0,"LevelRule":"","BrainTemplateFileName":""}},"UseActionFireApproach":false,"AIHiddenLayers":[0,0,0],"MovesBeforeMutation":250000,"SelectionType":2,"CreatingARandomNetwork":true,"ConcurrentGames":100,"DesiredRandomNeurons":3,"MinimumNumberOfNeurons":3,"MaximumNumberOfNeurons":99,"PercentOfBrainsToCreateAsNewRandomDuringMutation":40,"PercentOfBrainsToCreateFromTemplate":0,"PercentOfBrainsPreservedDuringMutation":10,"NumberOfTimesASingleBrainIsMutatedInOneGeneration":2,"PercentChanceABrainIsPickedForMutation":50,"PercentageOfDeadScoreThreshold":0.9,"AIPlaysWithShields":true,"AIOneLevelOnly":false,"AIStartLevel":1,"AIStartScore":0,"AllowedActivationFunctions":[12,16,17,18],"AllowedMutationMethods":[0,1,2,3,4,5,6,7,8,9,10,11],"CellTypeRatios":{"PERCEPTRON":100,"AND":25,"TRANSISTOR":25,"IF":25,"MAX":25,"MIN":25},"Template":"","InputToAI":2,"EndGameIfLifeLost":false}
