--- a/SpaceInvadersAI/SpaceInvadersAI.csproj
+++ b/SpaceInvadersAI/SpaceInvadersAI.csproj
@@ -25,16 +25,31 @@
     <None Update="space-invaders-fitness-scoring.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Templates\s=10010 lvl=9 ik=21 sk=0.tem">
+    <None Update="Templates\radar position s=1090 lvl=1 ik=55 sk=1.tem">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Templates\s=5110 lvl=5 ik=268 sk=3.tem">
+    <None Update="Templates\radar position s=2080 lvl=2 ik=55 sk=0.tem">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Templates\s=7960 lvl=7 ik=146 sk=2.tem">
+    <None Update="Templates\radar position s=3120 lvl=3 ik=55 sk=1.tem">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="Templates\s=9770 lvl=8 ik=101 sk=0.tem">
+    <None Update="Templates\radar position s=4110 lvl=4 ik=55 sk=0.tem">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\radar position s=5100 lvl=5 ik=55 sk=0.tem">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\radar position s=5940 lvl=6 ik=55 sk=0.tem">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\radar position s=6930 lvl=7 ik=55 sk=0.tem">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\radar position s=8020 lvl=10 ik=55 sk=1.tem">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Templates\radar position s=9160 lvl=11 ik=55 sk=1.tem">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
